Fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -5,9 +5,6 @@ body,
 #canvas {
     height: 100%;
     min-height: 100%;
-}
-
-* {
     overflow: hidden;
 }
 
